Tue Oct 20 16:29:46 1998  Dan Winship  <danw@mit.edu>

	* ftpd.M: Reality check. Add -a to synopsis, document -c and -u
	and CCC.

1998-10-08  Geoffrey King  <gjking@mit.edu>

	* ftpd.c: Add support for restricted users, as requested in
	[krb5-appl/481].  Users that appear in /etc/ftpusers, followed
	by the keyword "restrict" will be granted access, but a chroot()
	will be done to their home directory.

Tue Sep 29 19:25:09 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* ftpd.c (auth_data): Don't use h_errno, it's not fully portable,
		and it's not worth it.

1998-08-28  Geoffrey King  <gjking@mit.edu>

	* ftpd.c (login): New function.  Essentially, the old pass
	function has been split into its two logical components, pass and
	login.  Don't reply 230 "User logged in" if the user didn't
	send a PASS command; this causes the client to get a bit confused.
	(pass): If auth_ok is true, reply with code 202 to tell the
	user that a PASS command is not necessary. 
	(auth_ok): New function that returns true if either gss_ok or
	kerb_ok is true (all the #ifdefs were beginning to clutter things,
	and it's a good abstraction in case other auth types are ever
	added in the future).
	(user): If GSSAPI or Kerberos v4 authentication succeeds, call
	login immediately, instead of waiting for the client to send "PASS
	dummy."  Also, use #ifdef PARANOID instead of "some paranoid sites
	may wish to uncomment this"

Wed Aug 19 06:47:46 1998  Geoffrey King  <gjking@mit.edu>

	* ftpd.c: Add a new command line option, -c, which tells the
	server to accept the CCC command.

	* ftpcmd.y: If the -c option was given, check to make sure the CCC
	command itself was integrity protected, and then set ccc_ok to
	allow future commands to be transmitted as cleartext.
	(getline): Now that CCC is potentially allowed, we must check to
	see if we are parsing an unprotected command even if a security
	context is established (i.e. auth_type is set).

Wed Aug 12 02:57:07 1998  Geoffrey King  <gjking@mit.edu>
